# semana10/api_role/app/controllers/user_controller.py
@@ -11,6 +11,7 @@ def register():
     data = request.json
     username = data.get("username")
     password = data.get("password")
+    roles = data.get("roles")
 
     if not username or not password:
         return jsonify({"error": "Se requieren nombre de usuario y contraseña"}), 400
@@ -19,7 +20,7 @@ def register():
     if existing_user:
         return jsonify({"error": "El nombre de usuario ya está en uso"}), 400
 
-    new_user = User(username, password)
+    new_user = User(username, password, roles)
     new_user.save()
 
     return jsonify({"message": "Usuario creado exitosamente"}), 201
@@ -34,7 +35,9 @@ def login():
     user = User.find_by_username(username)
     if user and check_password_hash(user.password_hash, password):
         # Si las credenciales son válidas, genera un token JWT
-        access_token = create_access_token(identity=username)
+        access_token = create_access_token(
+            identity={"username": username, "roles": user.roles}
+        )
         return jsonify(access_token=access_token), 200
     else:
         return jsonify({"error": "Credenciales inválidas"}), 401
